# trading_algo

./: .env  .gitignore  README.md  environment.txt  import subprocess.py  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.in  requirements.txt  run.py  screened_stocks_20260213.csv  settings.py  setup.py  start.py  stock_analysis_project.pyproj  stock_analysis_project.sln  test_dashboard.py  test_fix.py  test_imports.py  update_requirements.py.code-workspace
data/: trading_market_report_20260420_2128.xls
models/: Best ImprovedLSTMPredictor_20251224_120646.h5  Best ImprovedLSTMPredictor_20251224_120646.h5.metadata.json  Best ImprovedLSTMPredictor_20251225_115341.keras  Best ImprovedLSTMPredictor_20251225_115341.keras.metadata.json  Best ImprovedLSTMPredictor_20251227_122450.keras  Best ImprovedLSTMPredictor_20251227_122450.keras.metadata.json  Best ImprovedLSTMPredictor_20251228_115217.keras  Best ImprovedLSTMPredictor_20251228_115217.keras.metadata.json  CatBoost Regressor_20251218_215705.pkl  CatBoost Regressor_20251227_184028.pkl  Linear Regression_20251230_031358.pkl  MLP Regressor_20251217_104255.pkl  MLP Regressor_20251217_165036.pkl  MLP Regressor_20251230_180536.pkl  MLP Regressor_20260102_110329.pkl  Support Vector Regressor_20251224_184617.pkl  Support Vector Regressor_20251226_131629.pkl  models_AAPL_20260122_213358.keras  models_AAPL_20260122_213358.keras.metadata.json  models_AAPL_20260123_134650.keras  models_AAPL_20260123_134650.keras.metadata.json  models_AAPL_20260124_100504.keras  models_AAPL_20260124_100504.keras.metadata.json  models_AAPL_20260124_102704.keras  (+1 more)
(+179 files in other folders)
