[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-algo"
version = "1.0.0"
authors = [
    {name = "Marc Lamoureux", email = "lamoureuxmarcqc@gmail.com"},
]
description = "Système d'analyse et de prédiction boursière avec IA"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.0.0",          # <-- Ajout de plotly
    "matplotlib>=3.10.0",
    "lxml>=6.0.2",
    "kaleido>=1.2.0",
]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]

[project.scripts]
trading-algo = "trading_algo.__main__:main"